2010-07-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* make-docfile.c (write_c_args): Deal with type names in DEFUN
	arguments.

2010-07-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* update-game-score.c (P_): Remove macro.
	* ebrowse.c: Remove include guards.
	(P_): Remove macro.

2010-07-07  Andreas Schwab  <schwab@linux-m68k.org>

	* ebrowse.c (add_sym, make_namespace): Replace bcopy, bzero by
	memcpy, memmove, memset.
	* pop.c (pop_retrieve, socket_connection, pop_getline): Likewise.

2010-07-06  Andreas Schwab  <schwab@linux-m68k.org>

	* movemail.c: Add MAIL_USE_POP around prototypes.
	Include <string.h> if HAVE_STRING_H.
	(strerror): Only declare if !HAVE_STRERROR.
	(fatal): Make static.
	(error): Likewise.
	(pfatal_with_name): Likewise.
	(pfatal_and_delete). Likewise.
	(concat): Likewise.
	(xmalloc): Likewise.
	(popmail): Likewise.
	(pop_retr): Likewise.
	(mbx_write): Likewise.
	(mbx_delimit_begin): Likewise.
	(mbx_delimit_end): Likewise.

2010-07-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* fakemail.c (action): Convert function definitions to standard C.
	(add_a_stream):
	* test-distrib.c (cool_read):
	(main): Likewise.

2010-07-03  Andreas Schwab  <schwab@linux-m68k.org>

	* sorted-doc.c (cmpdoc): Fix signature.
	(qsort_compare): Delete.
	(main): Remove cast.

2010-07-03  Juanma Barranquero  <lekktu@gmail.com>

	* ebrowse.c (match_qualified_namespace_alias): Check for null pointer.

2010-07-03  Juanma Barranquero  <lekktu@gmail.com>

	Fix prototype warnings.

	* ebrowse.c (match_qualified_namespace_alias):
	Pass sym* to find_namespace, not link*.

	* emacsclient.c (send_to_emacs, quote_argument): Arg s is HSOCKET.

	* sorted-doc.c (qsort_compare): New typedef.
	(main): Use it to cast cmpdoc.

2010-07-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* update-game-score.c: Convert function definitions to standard C.
	* sorted-doc.c:
	* profile.c:
	* pop.c:
	* movemail.c:
	* make-docfile.c:
	* hexl.c:
	* fakemail.c:
	* etags.c:
	* ebrowse.c:
	* digest-doc.c: